--- a/ofisart.azFront/src/layouts/Footer/Footer.scss
+++ b/ofisart.azFront/src/layouts/Footer/Footer.scss
@@ -20,7 +20,7 @@ footer {
         background-image: url("https://www.zivella.com/s/2636/i/Whatsappikon.svg");
         background-repeat: no-repeat;
         background-position: center;
-        &:hover{
+        &:hover {
             cursor: pointer;
         }
     }
@@ -229,5 +229,11 @@ footer {
         width: 100%;
         height: 100px;
         background-color: #202020;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        p{
+            color: #b97a56;
+        }
     }
 }
