--- a/ofisart.azFront/src/pages/BestSeller/BestSeller.scss
+++ b/ofisart.azFront/src/pages/BestSeller/BestSeller.scss
@@ -6,6 +6,31 @@
     flex-wrap: wrap;
     // justify-content: space-around;
     padding: 10px 0 10px 14px;
+    .spinner-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        // background-color: aqua;
+        width: 100%;
+        min-height: 100vh; 
+        i{
+            font-size: 90px;
+            color: #B97A56;
+        }
+      }
+      
+      .fa-spinner {
+        animation: spin 1s linear infinite;
+      }
+      
+      @keyframes spin {
+        from {
+          transform: rotate(0deg);
+        }
+        to {
+          transform: rotate(360deg);
+        }
+      }
     .card {
         width: 33%;
         // height: 350px;
