--- a/ofisart.azFront/src/components/HeaderSection/HeaderSection.scss
+++ b/ofisart.azFront/src/components/HeaderSection/HeaderSection.scss
@@ -1,6 +1,6 @@
 .swiper {
     width: 100%;
-    height: 100vh;
+    min-height: 100vh;
     .img-1 {
         width: 100%;
         height: 100vh;
@@ -21,7 +21,7 @@
                 color: white;
                 font-family: -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
                     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-                font-size: 30px;
+                font-size: 25px;
                 font-weight: 400;
             }
         }
@@ -57,7 +57,7 @@
                 color: white;
                 font-family: -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
                     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-                font-size: 30px;
+                font-size: 25px;
                 font-weight: 400;
             }
         }
@@ -93,7 +93,7 @@
                 color: white;
                 font-family: -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
                     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-                font-size: 30px;
+                font-size: 25px;
                 font-weight: 400;
             }
         }
@@ -130,7 +130,7 @@
                 color: white;
                 font-family: -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
                     "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-                font-size: 30px;
+                font-size: 25px;
                 font-weight: 400;
             }
         }
