--- a/ofisart.azFront/src/components/ProductSection/ProductSection.scss
+++ b/ofisart.azFront/src/components/ProductSection/ProductSection.scss
@@ -13,6 +13,7 @@
         h2{
             font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
             color: #B97A56;
+            font-weight: 500;
         }
 
         .image {
