--- a/ofisart.azFront/src/pages/BestSeller/BestSeller.scss
+++ b/ofisart.azFront/src/pages/BestSeller/BestSeller.scss
@@ -13,6 +13,7 @@
         // background-color: aqua;
         width: 100%;
         min-height: 100vh; 
+        
         i{
             font-size: 90px;
             color: #B97A56;
@@ -38,14 +39,10 @@
         border: 1px solid gainsboro;
         .name {
             font-size: 18px;
-            font-family:
-                system-ui,
-                -apple-system,
-                "Segoe UI",
-                "Open Sans",
-                "Helvetica Neue",
-                sans-serif;
             line-height: 20px;
+            margin-left: 30px;
+            margin-top: 30px;
+            color: #B97A56;
         }
         img {
             width: 100%;
