--- a/ofisart.azFront/src/pages/Detail/DetailPage.scss
+++ b/ofisart.azFront/src/pages/Detail/DetailPage.scss
@@ -1,8 +1,30 @@
-.detailCard{
+.detail {
     width: 100%;
     min-height: 100vh;
-    background-color: aqua;
-    img{
-        width: 600px;
+    background-color: green;
+    display: flex;
+    align-items: center;
+    .detailLeft {
+        width: 60%;
+        min-height: 100vh;
+        background-color: aqua;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        img {
+            object-position: center;
+        }
+    }
+    .detailRight{
+        width: 40%;
+        min-height: 100vh;
+        // background-color: yellow;
+        .name{
+            font-size: 40px;
+        }
+        .country{
+            font-size: 16px;
+            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        }
     }
 }
