--- a/ofisart.azFront/src/components/ProductSection/ProductSection.scss
+++ b/ofisart.azFront/src/components/ProductSection/ProductSection.scss
@@ -10,9 +10,15 @@
         width: 400px;
         // height: 450px;
         // background-color: red;
-        h2{
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-            color: #B97A56;
+        h2 {
+            font-family:
+                system-ui,
+                -apple-system,
+                "Segoe UI",
+                "Open Sans",
+                "Helvetica Neue",
+                sans-serif;
+            color: #b97a56;
             font-weight: 500;
         }
 
@@ -32,7 +38,7 @@
                 transform: translate(-50%, -50%);
                 opacity: 0;
                 transition: 600ms;
-                i{
+                i {
                     color: white;
                     position: absolute;
                     top: 50%;
