--- a/ofisart.azFront/src/pages/Detail/DetailPage.scss
+++ b/ofisart.azFront/src/pages/Detail/DetailPage.scss
@@ -1,13 +1,13 @@
 .detail {
     width: 100%;
     min-height: 100vh;
-    background-color: green;
+    // background-color: green;
     display: flex;
     align-items: center;
     .detailLeft {
         width: 60%;
         min-height: 100vh;
-        background-color: aqua;
+        // background-color: aqua;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -15,16 +15,63 @@
             object-position: center;
         }
     }
-    .detailRight{
+    .detailRight {
         width: 40%;
-        min-height: 100vh;
+        height: 500px;
         // background-color: yellow;
-        .name{
-            font-size: 40px;
+        display: flex;
+        flex-direction: column;
+        // align-items: center;
+        // justify-content: center;
+        .name {
+            font-size: 80px;
+            font-family:
+                system-ui,
+                -apple-system,
+                "Segoe UI",
+                "Open Sans",
+                "Helvetica Neue",
+                sans-serif;
+            font-weight: 700;
+
         }
-        .country{
-            font-size: 16px;
-            font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        .country {
+            font-size: 40px;
+            font-family:
+                system-ui,
+                -apple-system,
+                "Segoe UI",
+                "Open Sans",
+                "Helvetica Neue",
+                sans-serif;
+            font-weight: 600;
+
+
+        }
+        .delivery{
+            font-size: 40px;
+            font-family:
+            system-ui,
+            -apple-system,
+            "Segoe UI",
+            "Open Sans",
+            "Helvetica Neue",
+            sans-serif;
+            font-weight: 600;
+
+
+        }
+        .model{
+            font-size: 40px;
+            font-family:
+            system-ui,
+            -apple-system,
+            "Segoe UI",
+            "Open Sans",
+            "Helvetica Neue",
+            sans-serif;
+            font-weight: 600;
+
         }
     }
 }
