--- a/ofisart.azFront/src/components/Gallery/Gallery.scss
+++ b/ofisart.azFront/src/components/Gallery/Gallery.scss
@@ -7,139 +7,92 @@ $s: 400px; /* the size */
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    // background-color: aqua;
-    .blur {
-        width: 100%;
-        background-color: rgba($color: black, $alpha: 0.5);
-        display: flex;
-        align-items: center;
-        display: flex;
-        justify-content: space-around;
+    display: flex;
+    // background-color: red;
+    justify-content: space-around;
 
-        .galleryText {
-            background-color: rgba($color: black, $alpha: 0.5);
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            h1 {
-                font-family:
-                    system-ui,
-                    -apple-system,
-                    BlinkMacSystemFont,
-                    "Segoe UI",
-                    Roboto,
-                    Oxygen,
-                    Ubuntu,
-                    Cantarell,
-                    "Open Sans",
-                    "Helvetica Neue",
-                    sans-serif;
-                background: -webkit-linear-gradient(#8e2d2d, #1c4da3);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
-            }
+    .galleryImg {
+        display: grid;
+        // background-color: aqua;
 
-            p {
-                font-family:
-                    system-ui,
-                    -apple-system,
-                    BlinkMacSystemFont,
-                    "Segoe UI",
-                    Roboto,
-                    Oxygen,
-                    Ubuntu,
-                    Cantarell,
-                    "Open Sans",
-                    "Helvetica Neue",
-                    sans-serif;
-                font-size: 11px;
-                font-weight: 700;
-                background: -webkit-linear-gradient(#8e2d2d, #1c4da3);
-                -webkit-background-clip: text;
-                -webkit-text-fill-color: transparent;
+        > img {
+            grid-area: 1/1;
+            width: $s;
+            aspect-ratio: 1;
+            object-fit: cover;
+            border-radius: 50%;
+            transform: translate(var(--_x, 0), var(--_y, 0));
+            cursor: pointer;
+            z-index: 0;
+            transition:
+                0.3s,
+                z-index 0s 0.3s;
+
+            &:hover {
+                --_i: 1;
+                z-index: 1;
+                transition:
+                    transform 0.2s,
+                    clip-path 0.3s 0.2s,
+                    z-index 0s;
             }
         }
+        &:hover img {
+            transform: translate(0, 0);
+        }
 
-        .galleryImg {
-            display: grid;
+        > img:nth-child(1) {
+            clip-path: polygon(
+                50% 50%,
+                calc(50% * var(--_i, 0)) calc(120% * var(--_i, 0)),
+                0 calc(100% * var(--_i, 0)),
+                0 0,
+                100% 0,
+                100% calc(100% * var(--_i, 0)),
+                calc(100% - 50% * var(--_i, 0)) calc(120% * var(--_i, 0))
+            );
+            --_y: calc(-1 * $g);
+        }
 
-            > img {
-                grid-area: 1/1;
-                width: $s;
-                aspect-ratio: 1;
-                object-fit: cover;
-                border-radius: 50%;
-                transform: translate(var(--_x, 0), var(--_y, 0));
-                cursor: pointer;
-                z-index: 0;
-                transition:
-                    0.3s,
-                    z-index 0s 0.3s;
+        > img:nth-child(2) {
+            clip-path: polygon(
+                50% 50%,
+                calc(100% - 120% * var(--_i, 0)) calc(50% * var(--_i, 0)),
+                calc(100% - 100% * var(--_i, 0)) 0,
+                100% 0,
+                100% 100%,
+                calc(100% - 100% * var(--_i, 0)) 100%,
+                calc(100% - 120% * var(--_i, 0)) calc(100% - 50% * var(--_i, 0))
+            );
+            --_x: $g;
+        }
 
-                &:hover {
-                    --_i: 1;
-                    z-index: 1;
-                    transition:
-                        transform 0.2s,
-                        clip-path 0.3s 0.2s,
-                        z-index 0s;
-                }
-            }
-            &:hover img {
-                transform: translate(0, 0);
-            }
+        > img:nth-child(3) {
+            clip-path: polygon(
+                50% 50%,
+                calc(100% - 50% * var(--_i, 0)) calc(100% - 120% * var(--_i, 0)),
+                100% calc(100% - 120% * var(--_i, 0)),
+                100% 100%,
+                0 100%,
+                0 calc(100% - 100% * var(--_i, 0)),
+                calc(50% * var(--_i, 0)) calc(100% - 120% * var(--_i, 0))
+            );
+            --_y: $g;
+        }
 
-            > img:nth-child(1) {
-                clip-path: polygon(
-                    50% 50%,
-                    calc(50% * var(--_i, 0)) calc(120% * var(--_i, 0)),
-                    0 calc(100% * var(--_i, 0)),
-                    0 0,
-                    100% 0,
-                    100% calc(100% * var(--_i, 0)),
-                    calc(100% - 50% * var(--_i, 0)) calc(120% * var(--_i, 0))
-                );
-                --_y: calc(-1 * $g);
-            }
-
-            > img:nth-child(2) {
-                clip-path: polygon(
-                    50% 50%,
-                    calc(100% - 120% * var(--_i, 0)) calc(50% * var(--_i, 0)),
-                    calc(100% - 100% * var(--_i, 0)) 0,
-                    100% 0,
-                    100% 100%,
-                    calc(100% - 100% * var(--_i, 0)) 100%,
-                    calc(100% - 120% * var(--_i, 0)) calc(100% - 50% * var(--_i, 0))
-                );
-                --_x: $g;
-            }
-
-            > img:nth-child(3) {
-                clip-path: polygon(
-                    50% 50%,
-                    calc(100% - 50% * var(--_i, 0)) calc(100% - 120% * var(--_i, 0)),
-                    100% calc(100% - 120% * var(--_i, 0)),
-                    100% 100%,
-                    0 100%,
-                    0 calc(100% - 100% * var(--_i, 0)),
-                    calc(50% * var(--_i, 0)) calc(100% - 120% * var(--_i, 0))
-                );
-                --_y: $g;
-            }
-
-            > img:nth-child(4) {
-                clip-path: polygon(
-                    50% 50%,
-                    calc(120% * var(--_i, 0)) calc(50% * var(--_i, 0)),
-                    calc(100% * var(--_i, 0)) 0,
-                    0 0,
-                    0 100%,
-                    calc(100% * var(--_i, 0)) 100%,
-                    calc(120% * var(--_i, 0)) calc(100% - 50% * var(--_i, 0))
-                );
-                --_x: calc(-1 * $g);
-            }
+        > img:nth-child(4) {
+            clip-path: polygon(
+                50% 50%,
+                calc(120% * var(--_i, 0)) calc(50% * var(--_i, 0)),
+                calc(100% * var(--_i, 0)) 0,
+                0 0,
+                0 100%,
+                calc(100% * var(--_i, 0)) 100%,
+                calc(120% * var(--_i, 0)) calc(100% - 50% * var(--_i, 0))
+            );
+            --_x: calc(-1 * $g);
         }
     }
 }
+
+
