--- a/ofisart.azFront/src/pages/Detail/DetailPage.scss
+++ b/ofisart.azFront/src/pages/Detail/DetailPage.scss
@@ -21,10 +21,90 @@
         // background-color: yellow;
         display: flex;
         flex-direction: column;
+        gap: 20px;
         // align-items: center;
         // justify-content: center;
+        .service {
+            // background-color: aqua;
+            width: 400px;
+            .spanModel {
+                display: flex;
+                gap: 170px;
+                span {
+                    font-size: 25px;
+                    font-family:
+                        system-ui,
+                        -apple-system,
+                        "Segoe UI",
+                        "Open Sans",
+                        "Helvetica Neue",
+                        sans-serif;
+                }
+            }
+            .spanDelivery {
+                display: flex;
+                gap: 130px;
+                align-items: center;
+                .delivery {
+                    font-size: 25px;
+                    font-family:
+                        system-ui,
+                        -apple-system,
+                        "Segoe UI",
+                        "Open Sans",
+                        "Helvetica Neue",
+                        sans-serif;
+                }
+                span {
+                    font-size: 25px;
+                    font-family:
+                        system-ui,
+                        -apple-system,
+                        "Segoe UI",
+                        "Open Sans",
+                        "Helvetica Neue",
+                        sans-serif;
+                }
+            }
+            .spanCountry {
+                display: flex;
+                gap: 90px;
+                align-items: center;
+                span {
+                    font-size: 25px;
+                    font-family:
+                        system-ui,
+                        -apple-system,
+                        "Segoe UI",
+                        "Open Sans",
+                        "Helvetica Neue",
+                        sans-serif;
+                }
+                .country {
+                    font-size: 25px;
+                    font-family:
+                        system-ui,
+                        -apple-system,
+                        "Segoe UI",
+                        "Open Sans",
+                        "Helvetica Neue",
+                        sans-serif;
+                }
+            }
+
+            .model {
+                font-size: 25px;
+                font-family:
+                    system-ui,
+                    -apple-system,
+                    "Segoe UI",
+                    "Open Sans",
+                    "Helvetica Neue",
+                    sans-serif;
+            }
+        }
         .name {
-            font-size: 80px;
+            font-size: 50px;
             font-family:
                 system-ui,
                 -apple-system,
@@ -32,46 +112,12 @@
                 "Open Sans",
                 "Helvetica Neue",
                 sans-serif;
-            font-weight: 700;
-
+            font-weight: 300;
         }
-        .country {
-            font-size: 40px;
-            font-family:
-                system-ui,
-                -apple-system,
-                "Segoe UI",
-                "Open Sans",
-                "Helvetica Neue",
-                sans-serif;
-            font-weight: 600;
-
-
-        }
-        .delivery{
-            font-size: 40px;
-            font-family:
-            system-ui,
-            -apple-system,
-            "Segoe UI",
-            "Open Sans",
-            "Helvetica Neue",
-            sans-serif;
-            font-weight: 600;
-
-
-        }
-        .model{
-            font-size: 40px;
-            font-family:
-            system-ui,
-            -apple-system,
-            "Segoe UI",
-            "Open Sans",
-            "Helvetica Neue",
-            sans-serif;
-            font-weight: 600;
-
+        .description {
+            font-size: 22px;
+            font-weight: 500;
+            font-family: "Nunito", sans-serif;
         }
     }
 }
