--- a/ofisart.azFront/src/components/HeaderSection/HeaderSection.scss
+++ b/ofisart.azFront/src/components/HeaderSection/HeaderSection.scss
@@ -16,6 +16,7 @@
             left: 20px;
             opacity: 0;
             transition: 700ms;
+            padding-left: 12px;
 
             h2 {
                 color: white;
@@ -53,6 +54,8 @@
             left: 20px;
             opacity: 0;
             transition: 700ms;
+            padding-left: 12px;
+
             h2 {
                 color: white;
                 font-family: -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -89,6 +92,8 @@
             left: 20px;
             opacity: 0;
             transition: 700ms;
+            padding-left: 12px;
+
             h2 {
                 color: white;
                 font-family: -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
@@ -126,6 +131,8 @@
             left: 20px;
             opacity: 0;
             transition: 700ms;
+            padding-left: 12px;
+
             h2 {
                 color: white;
                 font-family: -apple-system, "Segoe UI", "Helvetica Neue", Arial, "Noto Sans", sans-serif,
