--- a/ofisart.azFront/src/pages/Private/DashboardNext/DashboardNext.scss
+++ b/ofisart.azFront/src/pages/Private/DashboardNext/DashboardNext.scss
@@ -1,75 +1,109 @@
 .add {
+  width: 100%;
+  margin-top: 150px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 60px;
+
+  .nav {
     width: 100%;
-    margin-top: 150px;
+    height: 10vh;
+    position: absolute;
+    top: 0;
+    left: 0;
+    background-color: rgb(199, 199, 199);
+  }
+
+  form {
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 60px;
-  
-    .nav {
-      width: 100%;
-      height: 10vh;
-      position: absolute;
-      top: 0;
-      left: 0;
-      background-color: rgb(199, 199, 199);
-    }
-  
-    form {
-      display: flex;
-      justify-content: center;
-      flex-direction: column;
-      gap: 25px;
-      input {
-        width: 430px;
-        height: 40px;
+    gap: 25px;
+    .select {
+      width: 200px;
+      padding: 8px;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+      font-size: 14px;
+      font-family:
+        system-ui,
+        -apple-system,
+        "Segoe UI",
+        "Open Sans",
+        "Helvetica Neue",
+        sans-serif;
         outline: none;
-        border: 1px solid rgb(122, 122, 122);
+      &:hover {
+        cursor: pointer;
       }
-  
-      button {
-        width: 130px;
-        height: 30px;
-        color: black;
-        border: none;
-        background-color: rgb(199, 199, 199);
-      }
+      .option {
+        // background-color: aqua;
+        color: #333;
+        font-family:
+        system-ui,
+        -apple-system,
+        "Segoe UI",
+        "Open Sans",
+        "Helvetica Neue",
+        sans-serif;      }
     }
-  
     input {
       width: 430px;
       height: 40px;
-      padding: 10px;
-      border: none;
-      border-bottom: 1px solid rgb(44, 90, 177);
       outline: none;
+      border: 1px solid rgb(122, 122, 122);
     }
-  
-    .buttons {
-      display: flex;
-      gap: 10px;
-  
-      button {
-        border: none;
-        background-color: rgb(122, 122, 122);
-        color: white;
-        padding: 10px;
-      }
-    }
-  
-    table {
-      width: 80%;
-  
-      td {
-        text-align: center;
-  
-        i {
-          cursor: pointer;
-          font-size: 25px;
-          color: rgb(221, 25, 25);
-        }
-      }
+
+    button {
+      width: 130px;
+      height: 30px;
+      color: black;
+      border: none;
+      background-color: rgb(199, 199, 199);
     }
   }
-  
+
+  input {
+    width: 430px;
+    height: 40px;
+    padding: 10px;
+    border: none;
+    border-bottom: 1px solid rgb(44, 90, 177);
+    outline: none;
+  }
+
+  .buttons {
+    display: flex;
+    gap: 10px;
+
+    button {
+      border: none;
+      background-color: rgb(122, 122, 122);
+      color: white;
+      padding: 10px;
+    }
+  }
+
+  .custom-table {
+    width: 100%;
+    border-collapse: collapse;
+
+    th, td {
+        border: 1px solid #ddd;
+        padding: 8px;
+    }
+
+    th {
+        background-color: #f2f2f2;
+        padding: 10px;
+        text-align: left;
+    }
+
+    img {
+        max-width: 100%;
+        height: auto;
+    }
+}
+}
