--- a/ofisart.azFront/src/pages/ProjectPage/ProjectPage.scss
+++ b/ofisart.azFront/src/pages/ProjectPage/ProjectPage.scss
@@ -48,8 +48,9 @@
             line-height: 20px;
         }
         img {
-            width: 100%;
+            width: 90%;
             height: 95%;
+            object-fit: contain;
         }
     }
 }
