--- a/ofisart.azFront/src/components/Gallery/Gallery.scss
+++ b/ofisart.azFront/src/components/Gallery/Gallery.scss
@@ -10,6 +10,8 @@ $s: 400px; /* the size */
     display: flex;
     // background-color: red;
     justify-content: space-around;
+    padding: 20px 0;
+    gap: 20px;
 
     .galleryImg {
         display: grid;
@@ -95,4 +97,9 @@ $s: 400px; /* the size */
     }
 }
 
-
+@media only screen and (max-width:768px) {
+    .gallery {
+        flex-direction: column;
+        align-items: center;
+    }
+}
