--- a/ofisart.azFront/src/layouts/Footer/Footer.scss
+++ b/ofisart.azFront/src/layouts/Footer/Footer.scss
@@ -7,8 +7,9 @@
 }
 
 footer {
+    overflow: hidden;
     width: 100%;
-    height: 500px;
+    height: min-content;
     // background-color: red;
     .wp {
         width: 100px;
@@ -25,8 +26,9 @@ footer {
         }
     }
     .footerTop {
+        padding: 40px 0;
         width: 100%;
-        height: 400px;
+        // height: 400px;
         background-color: #2c2c2c;
         display: flex;
         align-items: center;
@@ -42,7 +44,12 @@ footer {
                 font-family:
                     system-ui,
                     -apple-system,
+                    BlinkMacSystemFont,
                     "Segoe UI",
+                    Roboto,
+                    Oxygen,
+                    Ubuntu,
+                    Cantarell,
                     "Open Sans",
                     "Helvetica Neue",
                     sans-serif;
@@ -214,7 +221,7 @@ footer {
                 gap: 5px;
                 flex-wrap: wrap;
                 img {
-                    width: 110px;
+                    max-width: 110px;
                     // height: 100px;
                 }
             }
@@ -222,13 +229,19 @@ footer {
     }
     .footerBottom {
         width: 100%;
-        height: 100px;
+        padding: 10px 5px;
         background-color: #202020;
         display: flex;
         justify-content: center;
         align-items: center;
-        p {
+        p{
             color: #b97a56;
         }
+    }
+}
+
+@media only screen and (max-width:768px) {
+    .footerTop {
+        flex-direction: column;
     }
 }
