--- a/ofisart.azFront/src/layouts/Navbar/Navbar.scss
+++ b/ofisart.azFront/src/layouts/Navbar/Navbar.scss
@@ -39,6 +39,11 @@ body {
     // background-color: #fff;
     background-color: initial;
     transition: 0.35s;
+
+    &.darkmode {
+        color: #fff;
+        background-color: var(--color2-dark);
+    }
 }
 
 main {
@@ -92,6 +97,13 @@ img {
     }
 }
 
+/* Elements Section */
+// .section {
+//     margin: 0 auto;
+//     padding: 6rem 0 2rem;
+//     background-color: palevioletred;
+// }
+
 .container {
     max-width: 75rem;
     height: auto;
@@ -103,6 +115,13 @@ img {
     left: 0;
     // background-color: initial;
 }
+
+// .centered {
+//     text-align: center;
+//     vertical-align: middle;
+//     margin-bottom: 1rem;
+//     background-color: green;
+// }
 
 /* Header Section */
 .header {
@@ -140,11 +159,15 @@ img {
             font-family:
                 system-ui,
                 -apple-system,
+                BlinkMacSystemFont,
                 "Segoe UI",
+                Roboto,
+                Oxygen,
+                Ubuntu,
+                Cantarell,
                 "Open Sans",
                 "Helvetica Neue",
                 sans-serif;
-
             font-size: 30px;
         }
     }
@@ -598,4 +621,65 @@ img {
             top: 16px;
         }
     }
+}
+
+.burgerMenu {display: none;}
+.burgerList {display: none;}
+
+@media only screen and (max-width:768px) {
+    .menu__inner {
+        display: none !important;
+    }
+
+    .navbar__right {
+        display: none !important;
+    }
+
+    .navbar {
+        display: flex !important;
+        flex-direction: row !important;
+    }
+
+    .burgerMenu {
+        display: block;
+        position: absolute;
+        right: 10%;
+    }
+
+    .burgerIcon {
+        font-size: 1.5rem;
+        color: #b97a56;
+    }
+
+    .burgerList {
+        position: absolute;
+        top: 65px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 20px;
+        background-color:#1a1717;
+        color: #b97a56;
+        width: 100%;
+        // padding: 25px 0;
+        // min-height: 330px;
+        overflow: hidden;
+        // max-height: 350px;
+        max-height: 350px;
+        transition: .3s;
+    }
+
+    .burgerList li {
+        font-size: 1.1rem;
+        // border-bottom: 2px solid #b97a56;
+    }
+    .burgerList hr {
+        height: 1px;
+        width: 50vw;
+        color: #b97a56;
+    }
+
+    .burgerOpen {height: 350px ; transition: .3s;}
+    .burgerClose {max-height: 0; transition: .3s;}
 }
