--- a/ofisart.azFront/src/pages/Detail/DetailPage.scss
+++ b/ofisart.azFront/src/pages/Detail/DetailPage.scss
@@ -12,7 +12,8 @@
         justify-content: center;
         align-items: center;
         img {
-            object-position: center;
+            // object-fit: contain;
+            width: 100%;
         }
     }
     .detailRight {
