--- a/ofisart.azFront/src/pages/ProjectDetail/ProjectDetail.scss
+++ b/ofisart.azFront/src/pages/ProjectDetail/ProjectDetail.scss
@@ -12,7 +12,7 @@
         justify-content: center;
         align-items: center;
         img {
-            object-position: center;
+            width: 100%;
         }
     }
     .detailRight {
