--- a/ofisart.azFront/src/components/Gallery/Gallery.scss
+++ b/ofisart.azFront/src/components/Gallery/Gallery.scss
@@ -15,7 +15,6 @@ $s: 400px; /* the size */
 
     .galleryImg {
         display: grid;
-        // background-color: aqua;
 
         > img {
             grid-area: 1/1;
@@ -29,6 +28,7 @@ $s: 400px; /* the size */
             transition:
                 0.3s,
                 z-index 0s 0.3s;
+            width: 100%;
 
             &:hover {
                 --_i: 1;
@@ -97,9 +97,18 @@ $s: 400px; /* the size */
     }
 }
 
-@media only screen and (max-width:768px) {
+@media only screen and (max-width: 768px) {
     .gallery {
         flex-direction: column;
         align-items: center;
+        .galleryImg {
+            width: 65%;
+            img {
+                display: flex;
+                width: 100%;
+                justify-content: center;
+                align-items: center;
+            }
+        }
     }
 }
