--- a/ofisart.azFront/src/layouts/Navbar/Navbar.scss
+++ b/ofisart.azFront/src/layouts/Navbar/Navbar.scss
@@ -100,6 +100,7 @@ body {
             display: flex;
             align-items: center;
             column-gap: 1.5rem;
+            justify-content: center;
             button {
                 width: 40px;
                 background-color: #b97a56;
