--- a/ofisart.azFront/src/pages/Sofa/Sofa.scss
+++ b/ofisart.azFront/src/pages/Sofa/Sofa.scss
@@ -36,6 +36,8 @@
     // height: 350px;
     // background-color: red;
     border: 1px solid gainsboro;
+    padding: 20px;
+
     .name {
       font-size: 18px;
       font-family:
