--- a/ofisart.azFront/src/pages/BestSeller/BestSeller.scss
+++ b/ofisart.azFront/src/pages/BestSeller/BestSeller.scss
@@ -37,12 +37,10 @@
         // height: 350px;
         // background-color: red;
         border: 1px solid gainsboro;
+        padding: 20px;
         .name {
             font-size: 18px;
             line-height: 20px;
-            margin-left: 30px;
-            margin-top: 30px;
-            color: #B97A56;
         }
         img {
             width: 100%;
