--- a/ofisart.azFront/src/pages/ProjectDetail/ProjectDetail.scss
+++ b/ofisart.azFront/src/pages/ProjectDetail/ProjectDetail.scss
@@ -121,3 +121,37 @@
         }
     }
 }
+@media only screen and (max-width: 768px) {
+    .projectDetail{
+        flex-direction: column;
+        // background-color: aqua;
+        .detailRight{
+            width: 100%;
+            // background-color: red;
+            gap: 0;
+            .name{
+                // background-color: gray;
+                font-size: 26px;
+                font-weight: 400;
+            }
+            .description{
+                // background-color: yellow;
+                font-size: 16px;
+            }
+            .service{
+                // background-color: blue;
+                width: 100%;
+ 
+                .spanCountry{
+                    gap: 5px;
+                    span{
+                    font-size: 16px;
+                    }
+                    .country{
+                        font-size: 16px;
+                    }
+                }
+            }
+        }
+    }
+}
