--- a/ofisart.azFront/src/pages/ProjectPage/ProjectPage.scss
+++ b/ofisart.azFront/src/pages/ProjectPage/ProjectPage.scss
@@ -36,10 +36,10 @@
     // height: 350px;
     // background-color: red;
     border: 1px solid gainsboro;
-    padding: 15px 15px;
     display: flex;
     flex-direction: column;
     gap: 20px;
+    padding: 20px;
     .name {
       font-size: 18px;
       font-family:
@@ -55,6 +55,17 @@
       width: 100%;
       // height: 95%;
       object-fit: contain;
+    }
+  }
+}
+@media only screen and (max-width: 768px) {
+  .project{
+    // background-color: aqua;
+    flex-direction: column;
+    padding: 25px 10px;
+    .card{
+      // background-color: red;
+      width: 100%;
     }
   }
 }
