--- a/ofisart.azFront/src/layouts/Navbar/Navbar.scss
+++ b/ofisart.azFront/src/layouts/Navbar/Navbar.scss
@@ -72,21 +72,25 @@ body {
             display: flex;
             justify-content: center;
             align-items: center;
-            h1 {
-                color: #b97a56;
-                font-family:
-                    system-ui,
-                    -apple-system,
-                    BlinkMacSystemFont,
-                    "Segoe UI",
-                    Roboto,
-                    Oxygen,
-                    Ubuntu,
-                    Cantarell,
-                    "Open Sans",
-                    "Helvetica Neue",
-                    sans-serif;
-                font-size: 30px;
+            // background-color: aqua;
+            // h1 {
+            //     color: #b97a56;
+            //     font-family:
+            //         system-ui,
+            //         -apple-system,
+            //         BlinkMacSystemFont,
+            //         "Segoe UI",
+            //         Roboto,
+            //         Oxygen,
+            //         Ubuntu,
+            //         Cantarell,
+            //         "Open Sans",
+            //         "Helvetica Neue",
+            //         sans-serif;
+            //     font-size: 30px;
+            // }
+            img{
+                width: 100%;
             }
         }
 
