--- a/ofisart.azFront/src/layouts/Navbar/Navbar.scss
+++ b/ofisart.azFront/src/layouts/Navbar/Navbar.scss
@@ -89,7 +89,7 @@ body {
             //         sans-serif;
             //     font-size: 30px;
             // }
-            img{
+            img {
                 width: 100%;
             }
         }
@@ -104,7 +104,7 @@ body {
             display: flex;
             align-items: center;
             column-gap: 1.5rem;
-            justify-content: center;
+            // justify-content: center;
             button {
                 width: 40px;
                 background-color: #b97a56;
@@ -301,8 +301,6 @@ body {
         background: transparent;
         background-color: #b97a56;
 
-
-
         .burger-line {
             position: absolute;
             display: block;
@@ -340,11 +338,120 @@ body {
     }
 
     @media only screen and (max-width: 768px) {
+        .burgerLeft {
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+
+            justify-content: space-between;
+        }
+
+        .langDiv {
+            display: none;
+            flex-direction: column;
+            gap: 10px;
+        }
+
+        .resLang {
+            display: none !important;
+        }
+        .accordionItems {
+            // background-color: red;
+            margin: 10px 0;
+
+            .textIcon {
+                // background-color: rgb(0, 0, 0);
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+                p {
+                    font-family:
+                        system-ui,
+                        -apple-system,
+                        BlinkMacSystemFont,
+                        "Segoe UI",
+                        Roboto,
+                        Oxygen,
+                        Ubuntu,
+                        Cantarell,
+                        "Open Sans",
+                        "Helvetica Neue",
+                        sans-serif;
+                    font-size: 15px;
+                    font-weight: 600;
+                }
+            }
+        }
+        .salam {
+            // background-color: aqua;
+            display: flex;
+            // background-color: aqua;
+            flex-direction: column;
+            gap: 7px;
+            li {
+                a {
+                    color: #b97a56;
+                    // font-size: 13px;
+                    font-weight: 600;
+                    font-family:
+                        system-ui,
+                        -apple-system,
+                        BlinkMacSystemFont,
+                        "Segoe UI",
+                        Roboto,
+                        Oxygen,
+                        Ubuntu,
+                        Cantarell,
+                        "Open Sans",
+                        "Helvetica Neue",
+                        sans-serif;
+                }
+            }
+        }
+        .accordionItem {
+            max-height: 0;
+            transition: 500ms ease-in-out;
+            overflow: hidden;
+            // background-color: yellow;
+            padding-left: 10px;
+            ul {
+                li {
+                    // list-style: armenian;
+                    // list-style: inside;
+
+                    a {
+                        font-size: 13px;
+                        color: #b97a56;
+                        font-family:
+                            system-ui,
+                            -apple-system,
+                            BlinkMacSystemFont,
+                            "Segoe UI",
+                            Roboto,
+                            Oxygen,
+                            Ubuntu,
+                            Cantarell,
+                            "Open Sans",
+                            "Helvetica Neue",
+                            sans-serif;
+                    }
+                }
+            }
+        }
+
         .menu__inner {
             display: none !important;
         }
-
-
+        .menu__dropdown {
+            &:hover {
+                > .submenu {
+                    opacity: 1;
+                    visibility: visible;
+                    top: 70%;
+                    left: 125px;
+                }
+            }
+        }
 
         .navbar {
             display: flex !important;
@@ -362,39 +469,57 @@ body {
             color: #b97a56;
         }
 
+        .burgerRight {
+            background-color: #00000095;
+            transition: 1s;
+            z-index: 8;
+            position: absolute;
+            inset: 0;
+            top: 65px;
+            height: 100vh;
+        }
+
         .burgerList {
             position: absolute;
             top: 65px;
+            left: -100%;
+            z-index: 9;
+            height: calc(100vh - 65px);
+            width: 60%;
+            transition: 0.5s ease-in;
             display: flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-            gap: 20px;
-            background-color: #1a1717;
-            color: #b97a56;
-            width: 100%;
-            overflow: hidden;
-            max-height: 350px;
-            transition: 0.3s;
+
+            .burgerLeft {
+                height: 100%;
+                width: 100%;
+                padding: 20px 15px;
+                gap: 10px;
+                color: #b97a56;
+                overflow: hidden;
+                background-color: wheat;
+            }
+
+            .fa-angle-right {
+                color: #b97a56;
+                transition: 500ms;
+            }
+            .rotate {
+                transform: rotate(90deg);
+            }
         }
 
+        // .burgerClose {
+        //     max-height: 0;
+        // }
+
         .burgerList li {
-            font-size: 1.1rem;
+            font-size: 16px;
             color: #b97a56;
         }
         .burgerList hr {
             height: 1px;
             width: 50vw;
             color: #b97a56;
-        }
-
-        .burgerOpen {
-            height: 350px;
-            transition: 0.3s;
-        }
-        .burgerClose {
-            max-height: 0;
-            transition: 0.3s;
         }
     }
 }
