--- a/ofisart.azFront/src/pages/FilingCabinet/FilingCabinet.scss
+++ b/ofisart.azFront/src/pages/FilingCabinet/FilingCabinet.scss
@@ -55,3 +55,15 @@
         }
     }
 }
+
+@media only screen and (max-width: 768px) {
+    .filingCabinet{
+      // background-color: aqua;
+      flex-direction: column;
+      padding: 10px;
+      .card{
+        // background-color: red;
+        width: 100%;
+      }
+    }
+  }
