--- a/ofisart.azFront/src/pages/Wardrobe/Wardrobe.scss
+++ b/ofisart.azFront/src/pages/Wardrobe/Wardrobe.scss
@@ -56,3 +56,15 @@
     }
   }
 }
+
+@media only screen and (max-width: 768px) {
+  .wardrobe{
+    // background-color: aqua;
+    flex-direction: column;
+    padding: 10px;
+    .card{
+      // background-color: red;
+      width: 100%;
+    }
+  }
+}
